# libsignifix

./: .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  bootstrap  configure.ac
doc/: Doxyfile.in
src/: signifix.h  signifix.hxx
src/signifix/: signifix.c  signifix.h  signifix.hxx
tests/: fixed_significance.cxx  formatting_options.cxx  fp_category_safety.cxx  lower_prefix_bound.cxx  metric_unit_prefix.cxx  upper_prefix_bound.cxx  upper_prefix_round.cxx
tests/readme/: format_diff.cxx  format_load.cxx  format_rate.cxx  format_test.cxx
